syntax = "proto3";

package tenant.v1;

message Event {
  // イベントID
  uint64 id = 1;
  // 集約ID (=テナントID)
  string aggregate_id = 2;
  // イベントの内容
  oneof payload {
    TenantCreatedV1 tenant_created_v1 = 3;
    ItemsAddedV1 items_added_v1 = 4;
    ItemsRemovedV1 items_removed_v1 = 5;
  }
}

message TenantCreatedV1 {
  // テナント名
  string name = 1;
}

message ItemsAddedV1 {
  // 商品
  message Item {
    // 商品ID
    string id = 1;
    // 商品名
    string name = 2;
    // 値段
    uint32 price = 3;
  }

  // 追加された商品
  repeated Item items = 1;
}

message ItemsRemovedV1 {
  // 削除された商品ID
  repeated string item_ids = 1;
}
